# terminal-commander

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  EVIDENCE_REPORT_RUNTIME.md  NOTICE  POLICY.md  README.md  RELEASE_CHECKLIST.md  RISK_REGISTER.md  ROADMAP.md  SECURITY.md  SPEC.md  TESTING.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: .release-please-manifest.json  release-please-config.json
.planning/: PLAN-allow-shell.md  cursor_report_03.md  endpoint-coverage-hardening.md
.specify/: feature.json  init-options.json  integration.json
config/: targets.example.toml  terminal-commanderd.example.toml  terminal-commanderd.service.example
crates/cli/: Cargo.toml
crates/cli/src/: ipc.rs  main.rs  render.rs  update_locks.rs
crates/cli/tests/: audit_subcommand.rs  offline_truth.rs  pidfile_reassert.rs  read_subcommands.rs  replace_no_pidfile.rs  session_list.rs  session_reap.rs  status_pid.rs  subscription_stream.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: activation.rs  bucket.rs  context.rs  environment.rs  error.rs  event.rs  ids.rs  job.rs  lib.rs  platform.rs  pointer.rs  rule.rs  severity.rs  source.rs
crates/core/tests/: bench_events_since.rs  load.rs
crates/daemon/: Cargo.toml  README.md
crates/daemon/examples/: embed_in_process.rs
crates/daemon/src/: activation.rs  audit.rs  command.rs  config.rs  file_watch.rs  lib.rs  liveness.rs  main.rs  policy.rs  pty_command.rs  router.rs  runtime.rs  shell.rs  shell_session.rs  state.rs  store_actor.rs
crates/daemon/src/environment/: mod.rs  probe.rs  router.rs  wsl.rs
crates/daemon/src/ipc/: client.rs  framing.rs  mod.rs  peer.rs  peer_windows.rs  pipe_acl.rs  pipe_client.rs  pipe_server.rs  protocol.rs  server.rs
crates/daemon/src/ipc/handlers/: audit.rs  bucket.rs  command.rs  common.rs  file.rs  mod.rs  pty.rs  registry.rs  runtime.rs  session.rs  subscription.rs
crates/daemon/src/subscriptions/: mod.rs  model.rs  pull.rs  registry.rs  source.rs
crates/daemon/tests/: agent_superiority_bench.rs  audit_router.rs  bounded_ledger_ipc.rs  command_runtime.rs  command_status_lifecycle.rs  command_stop_ipc.rs  daemon_bootstrap.rs  daemon_single_flight.rs  daemon_writes_log.rs  environment_discovery.rs  file_ipc.rs  ipc_bucket.rs  ipc_command.rs  ipc_roundtrip.rs  load_noise_backpressure.rs  pack_import_match.rs  pipe_accept_loop.rs  pipe_acl.rs  pipe_malformed_frame.rs  pipe_peer_identity.rs  pipe_shutdown_drain.rs  pty_ipc.rs  pty_unsupported_platform.rs  registry_activation_integrity.rs  registry_deactivate_bulk.rs  registry_deactivate_teaching.rs  registry_ipc.rs  registry_live_rebind.rs  registry_scope_required.rs  registry_scoped_rebind.rs  registry_version_roundtrip.rs  runtime_state.rs  runtime_state_windows.rs  sc004_token_lean_bytes.rs  security.rs  selfcheck_ipc.rs  selfcheck_noop_subcommand.rs  shell_runtime.rs  shell_session_ipc.rs  shutdown_ipc.rs  (+6 more)
crates/ipc/: Cargo.toml  README.md
crates/ipc/src/: client.rs  framing.rs  lib.rs  pipe_client.rs  protocol.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: daemon_client.rs  facade_strict.rs  facades.rs  lib.rs  main.rs  surface.rs  surface_list.rs  target_router.rs  tools.rs
crates/mcp/tests/: bucket_compact_wait_events.rs  compact_surface.rs  daemon_self_heal.rs  daemon_unavailable_envelope.rs  e2e.rs  file_tools_live_e2e.rs  fixture_catalogue_contract.rs  instructions_contract.rs  ledger_compact_wait_restart.rs  mcp_inline_rules_e2e.rs  mcp_live_command_e2e.rs  mcp_live_daemon.rs  mcp_live_status_and_registry_e2e.rs  mcp_stdio.rs  mcp_subscription_notify.rs  mcp_subscriptions_e2e.rs  pty_tools_live_e2e.rs  registry_live_e2e.rs  registry_live_rebind_e2e.rs  registry_scope_required_e2e.rs  registry_scoped_rebind_e2e.rs  remote_federation_e2e.rs  retry_gate.rs  runtime_state_live_e2e.rs  shell_live_e2e.rs  shell_session_live_e2e.rs  stdin_eof_survives.rs  suggest_loop_e2e.rs
crates/probes/: Cargo.toml  README.md
crates/probes/src/: ansi.rs  directory.rs  file.rs  lib.rs  noise_pipeline.rs  process.rs  pty.rs  utf16.rs
crates/probes/tests/: ansi_strip.rs  process_tree_kill.rs  windows_no_console_spawn.rs
crates/sifters/: Cargo.toml  README.md
crates/sifters/src/: lib.rs  noise.rs  suggest.rs  universal.rs
crates/store/: Cargo.toml  README.md
crates/store/migrations/: V0001__initial_schema.sql  V0002__registry.sql  V0003__audit.sql  V0004__registry_scope.sql  V0005__drop_events_fts.sql  V0006__workspace_snapshot.sql  V0007__job_receipt.sql
crates/store/rules/: ansible.json  bundler.json  cargo.json  choco.json  cleanup.json  docker.json  dotnet.json  gcc.json  generic.terminal.json  git.json  go.json  kubectl.json  msbuild.json  npm.json  pip.json  pnpm.json  ssh.json  systemd.json  terraform.json  uv.json  winget.json  yarn.json
crates/store/src/: audit.rs  import.rs  job_receipt.rs  lib.rs  registry.rs  workspace.rs
crates/store/tests/: audit_persistence.rs  registry_activation_open_row.rs
crates/supervisor/: Cargo.toml  README.md
crates/supervisor/src/: ensure.rs  identity.rs  lib.rs  paths.rs  pidfile.rs  proc_lock.rs  replace.rs  session.rs  sessions.rs
crates/supervisor/tests/: ensure_single_flight.rs  ensure_smoke.rs  probe_handshake.rs  probe_handshake_windows.rs  windows_no_spawn_gate.rs
docs/: 2026-07-07-llm-usability-findings.md  2026-07-07-symforge-tooling-findings.md  EMBEDDING.md  field-ledger-2026-06-11-aap-campaign.md  ponytail-audit-2026-06-17.md
examples/: bucket_wait_demo.md  dynamic_rule_demo.md
goals/: ASSUMPTIONS.md  GOAL_CHAIN_INDEX.md  README_GOALS.md  RISK_REGISTER.md  RUN_ORDER.md  SOURCE_MAP.md  TC01-research-product-baseline-and-source-map.md  TC02-security-privilege-and-policy-doctrine.md  TC03-test-methodology-and-fixture-plan.md  TC04-rust-workspace-and-toolchain-scaffold.md  TC05-contract-schemas-and-golden-fixtures.md  TC06-core-identifiers-events-and-source-pointers.md  TC07-in-memory-bucket-manager.md  TC13-registry-store-and-rule-crud.md  (+24 more)
(+487 files in other folders)
