# Workspace manifest for Terminal Commander.
# See SPEC.md section 7 for the canonical 7-crate list and roles.

[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/sifters",
    "crates/probes",
    "crates/store",
    "crates/ipc",
    "crates/daemon",
    "crates/mcp",
    "crates/cli",
    "crates/supervisor",
]

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "PolyForm-Noncommercial-1.0.0"
authors = ["The Terminal Commander Authors"]
repository = "https://github.com/special-place-ai-heaven/terminal-commander"
homepage = "https://github.com/special-place-ai-heaven/terminal-commander"
# NOTE: workspace-level `readme` is intentionally omitted. Cargo resolves
# workspace-inherited `readme` paths relative to the workspace root, which
# does not work inside published per-crate tarballs (the workspace root is
# not in the tarball). Each publishable crate declares its own
# `readme = "README.md"` and ships a small per-crate README so crates.io
# has rendered content.
version = "0.1.54" # x-release-please-version
publish = true

[workspace.dependencies]
# Inter-crate dependencies (paths). Versions are pinned at the
# workspace level so member manifests stay terse. The explicit
# `version = "..."` is required for `cargo publish` to accept the
# resolved tarball (path-only deps are unpublishable).
terminal-commander-core    = { path = "crates/core",    version = "0.1.54" } # x-release-please-version
terminal-commander-sifters = { path = "crates/sifters", version = "0.1.54" } # x-release-please-version
terminal-commander-probes  = { path = "crates/probes",  version = "0.1.54" } # x-release-please-version
terminal-commander-store   = { path = "crates/store",   version = "0.1.54" } # x-release-please-version
terminal-commander-ipc     = { path = "crates/ipc",     version = "0.1.54" } # x-release-please-version

# Third-party crates referenced by SPEC / TC04 contract. Each is
# declared here so member crates pick the same version. Concrete
# usage lands in the goals listed in the comment after each line.
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "sync", "io-util", "fs", "time", "signal"] }  # TC15+
rmcp = { version = "=1.7.0", features = ["server", "macros", "transport-io"] }   # TC40
uuid = { version = "1", features = ["v4"] }   # subscriptions boot_id (Phase 1)
# rusqlite = { version = "0.39", features = ["bundled"] }    # TC12
# refinery = { version = "0.9" }                              # TC12
notify = { version = "8.2" }                                  # TC18/US3b: event-driven file backend (native FS)
# notify-debouncer-full = { version = "0.7" }                 # TC18 (unused: the probe coalesces via its own re-stat loop)

[workspace.lints.rust]
unsafe_code = "forbid"
# `missing_docs` is intentionally NOT a workspace-level lint: it
# produces a flood of errors against scaffold and in-progress code
# during early goals. Documentation rigor lands as a separate
# wave-3 goal (post-MVP polish). Individual crates may re-enable
# it locally when they declare their public surface stable.
unreachable_pub = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow a small set of pedantic lints that produce more noise than
# signal in a workspace skeleton. Each is reconsidered at TC32.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# `doc_markdown` flags every identifier in a doc comment that lacks
# backticks. Useful in mature docs; noisy during scaffold + early
# goals where docs evolve quickly. Reconsider at TC32.
doc_markdown = "allow"
# `doc_overindented_list_items` (a.k.a. doc_quote_line_without_marker
# in some Clippy versions) trips on indented ASCII diagrams used in
# the architecture doc comments. Allow.
doc_overindented_list_items = "allow"
# `doc_lazy_continuation` errors on continued lines in doc comments
# whose indent does not satisfy the CommonMark continuation rule.
# Too noisy on multi-line doc paragraphs at MVP.
doc_lazy_continuation = "allow"
# `significant_drop_tightening` flags any RwLock guard held across a
# function body. That is correct for tight-fast paths, but Terminal
# Commander's bucket / context-ring paths intentionally hold the
# write lock across mutation-plus-eviction blocks to keep the
# observable state consistent. Reconsider at TC32.
significant_drop_tightening = "allow"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = "line-tables-only"
lto = "thin"
codegen-units = 1
strip = "debuginfo"
