[package]
name = "terminal-commander-cli"
description = "Operator CLI. Talks to the daemon. Subcommands per TC25."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
publish.workspace = true

[[bin]]
name = "terminal-commander"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
terminal-commander-core.workspace = true

[lints]
workspace = true
