[package]
name = "terminal-commander-cli"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "terminal-commander"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1"
terminal-commander-core.workspace = true
terminal-commander-supervisor = { path = "../supervisor" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }

# Replicate workspace lints so the Windows update-lock helper can use
# tightly-scoped Win32 FFI. All other lint settings match the workspace.
[lints.rust]
unsafe_code = "allow"
unreachable_pub = "warn"
unused_lifetimes = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
doc_overindented_list_items = "allow"
doc_lazy_continuation = "allow"
significant_drop_tightening = "allow"

# `session reap` integration tests spawn a real `terminal-commanderd`
# binary via `env!("CARGO_BIN_EXE_terminal-commanderd")`. Cargo only
# defines that env var for the test crate when the binary's package is
# in dev-dependencies; this is a tests-only artifact dep (no symbols
# imported), so the runtime dep arrow stays cli -> supervisor only.
[dev-dependencies]
terminal-commanderd = { path = "../daemon" }
