[package]
name = "terminal-commander-core"
description = "Domain types, identifiers, severity, event/source/pointer models. No I/O."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
publish.workspace = true

[lints]
workspace = true
