[package]
name = "terminal-commander-core"
description = "Domain types, identifiers, severity, event/source/pointer models. No I/O."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "serde-well-known", "formatting", "parsing", "macros"] }
uuid = { version = "1", features = ["v7", "serde"] }
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
parking_lot = "0.12.5"
regex = "1.12.3"
tokio = { workspace = true, features = ["sync", "time", "rt"] }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
