[package]
name = "terminal-commanderd"
description = "Long-running Terminal Commander daemon. Owns bucket manager, context spool, policy engine, audit emitter, and local API."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "terminal-commanderd"
path = "src/main.rs"

[dependencies]
parking_lot = "0.12.5"
time = "0.3"
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread", "signal", "macros", "net", "io-util"] }
terminal-commander-core.workspace = true
terminal-commander-sifters.workspace = true
terminal-commander-probes.workspace = true
terminal-commander-store.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.6.1", features = ["derive"] }
toml = "0.9"
thiserror = "2.0.18"

[lints]
workspace = true

[dev-dependencies]
regex = "1.12.3"
