[package]
name = "terminal-commander-ipc"
description = "Terminal Commander IPC wire protocol, length-prefixed JSON framing, and the cross-platform DaemonClient transport (UDS on Unix, named pipe on Windows)."
readme = "README.md"
keywords = ["terminal-commander", "mcp", "ipc", "daemon"]
categories = ["development-tools"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
publish.workspace = true

[lib]
name = "terminal_commander_ipc"
path = "src/lib.rs"

[dependencies]
terminal-commander-core.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { workspace = true, features = ["net", "io-util", "time"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
] }

[lints]
workspace = true
