[package]
name = "terminal-commander-mcp"
description = "Thin MCP server adapter (rmcp 1.7.0 stdio). Forwards every tool call to the daemon over IPC."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "terminal-commander-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terminal-commander-core.workspace = true
terminal-commander-sifters = { version = "0.0.0", path = "../sifters" }
terminal-commanderd = { version = "0.0.0", path = "../daemon" }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread", "macros"] }

[lints]
workspace = true
