[package]
name = "terminal-commander-mcp"
description = "Thin MCP server adapter (rmcp 1.7.0 stdio). Forwards every tool call to the daemon over IPC."
readme = "README.md"
keywords = ["terminal-commander", "mcp"]
categories = ["development-tools"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "terminal-commander-mcp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terminal-commander-core.workspace = true
terminal-commander-sifters    = { version = "0.1.46", path = "../sifters" } # x-release-please-version
terminal-commander-store      = { version = "0.1.46", path = "../store" } # x-release-please-version
terminal-commander-ipc.workspace = true
terminal-commanderd           = { version = "0.1.46", path = "../daemon" } # x-release-please-version
terminal-commander-supervisor = { path = "../supervisor", version = "0.1.46" } # x-release-please-version
thiserror = "2.0.18"
time = "0.3.47"
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread", "macros", "io-std", "io-util", "net"] }

rmcp = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
# Subscriptions e2e (mcp_subscriptions_e2e) mints opaque sub_ids to assert the
# unknown-subscription error path; uuid is dev-only here.
uuid = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread", "macros", "io-util"] }
# Integration tests (mcp_live_command_e2e, daemon_unavailable_envelope, pty_tools_live_e2e)
# instantiate rmcp's in-process client (ClientHandler, RoleClient) so the test
# binaries need the "client" feature explicitly. Production mcp crate is server-only
# so this is dev-only.
rmcp = { workspace = true, features = ["client"] }
