[package]
name = "terminal-commander-probes"
description = "Probe definitions for the Terminal Commander observability surface."
readme = "README.md"
keywords = ["terminal-commander", "mcp"]
categories = ["development-tools"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
# US3b (TC55/T041): event-driven file backend on native filesystems
# (inotify/FSEvents/ReadDirectoryChangesW). WSL `/mnt/c` (9p/drvfs) is
# detected via /proc/self/mountinfo and falls back to the re-stat poll
# loop, because inotify is silently non-functional across the 9P boundary
# (microsoft/WSL#4739). License: CC0-1.0 / Artistic-2.0.
notify = { workspace = true }
parking_lot = "0.12.5"
terminal-commander-core.workspace = true
terminal-commander-sifters = { version = "0.1.85", path = "../sifters" } # x-release-please-version
thiserror = "2.0.18"
time = "0.3.47"
tokio = { workspace = true, features = ["process", "macros", "rt-multi-thread", "io-util", "sync", "time", "fs"] }
vte = "0.15.0"

# TC44: POSIX PTY spawn. Linux/WSL only; the crate's tokio-async API
# is used. License: MIT. Pinned to 0.5.3 per the TC44 prep amendment.
[target.'cfg(unix)'.dependencies]
pty-process = { version = "=0.5.3", features = ["async"] }

# H2: file-rotation identity on Windows. The std `MetadataExt`
# volume-serial / file-index accessors are unstable (`windows_by_handle`,
# rust-lang/rust#63010), so the file probe reads the same fields via
# `GetFileInformationByHandle` from the open handle on stable.
#
# Process-tree kill (process.rs): the cancel arm tears down the whole child
# tree via a Win32 Job Object (CreateJobObjectW / SetInformationJobObject /
# AssignProcessToJobObject / TerminateJobObject) instead of shelling out to
# taskkill/powershell (corporate-EDR hardening, mirrors supervisor/replace.rs).
#   * Win32_System_JobObjects — the Job Object APIs + JOBOBJECT_* structs.
#   * Win32_System_Threading   — JOBOBJECT_EXTENDED_LIMIT_INFORMATION embeds
#                                IO_COUNTERS, which lives behind this feature.
#   * Win32_Security           — CreateJobObjectW's signature references
#                                SECURITY_ATTRIBUTES, gated behind this feature
#                                (we pass a null pointer for it).
# US3a (TC53): Windows ConPTY spawn behind the same abstract `PtyProbe`
# surface the unix `pty-process` path exports. `portable-pty` wraps the
# Win32 ConPTY API (`CreatePseudoConsole`/`ClosePseudoConsole`), which
# requires Windows 10 1809+ (build 17763) -- the documented floor. Its
# reads are BLOCKING and NON-CANCELLABLE, so the Windows backend drives
# the reader on a plain `std::thread` (off tokio's blocking pool) and a
# CANCEL = kill child + drop master (ClosePseudoConsole) to force EOF.
# License: MIT.
[target.'cfg(windows)'.dependencies]
portable-pty = "0.9"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }

# Replicate workspace lints rather than using `workspace = true` so we
# can allow `unsafe_code` for Win32 FFI. Two Windows-only sites use it:
# tests/windows_no_console_spawn.rs (AttachConsole / GetConsoleWindow /
# FreeConsole) and file.rs `GetFileInformationByHandle` for H2 file
# rotation identity (no stable std API exists). Non-Windows production
# probe code does NOT use unsafe.
[lints.rust]
unsafe_code = "allow"          # Win32 FFI: console test + file.rs rotation identity
unreachable_pub = "warn"
unused_lifetimes = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
doc_overindented_list_items = "allow"
doc_lazy_continuation = "allow"
significant_drop_tightening = "allow"
