[package]
name = "terminal-commander-sifters"
description = "Output sifters (capture, filter, ring-buffer) for Terminal Commander."
readme = "README.md"
keywords = ["terminal-commander", "mcp"]
categories = ["development-tools"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
aho-corasick = "1.1.4"
indexmap = "2.14.0"
parking_lot = "0.12.5"
regex = "1.12.3"
terminal-commander-core.workspace = true
thiserror = "2.0.18"
time = "0.3.47"
uuid = { version = "1", features = ["v5"] }

[lints]
workspace = true
