[package]
name = "terminal-commander-store"
description = "rusqlite + refinery persistence: event store, bucket cursors, rule registry, audit log. FTS5 search lane."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
terminal-commander-core.workspace = true

[lints]
workspace = true
