[package]
name = "terminal-commander-supervisor"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
name = "terminal_commander_supervisor"
path = "src/lib.rs"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "io-util", "time", "macros"] }
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_Pipes",
] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
