[package]
name = "terminal-commander-supervisor"
description = "Cross-platform supervisor for Terminal Commander daemon — IPC bring-up, peer identity, ensure-daemon helpers."
readme = "README.md"
keywords = ["terminal-commander", "mcp", "daemon", "supervisor"]
categories = ["development-tools"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
publish.workspace = true

[lib]
name = "terminal_commander_supervisor"
path = "src/lib.rs"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs", "io-util", "time", "macros"] }
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_Pipes",
] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "rt", "rt-multi-thread", "net", "macros", "time", "io-util"] }
